--- a/src/App.global.css
+++ b/src/App.global.css
@@ -6,13 +6,8 @@ body {
   position: relative;
   color: white;
   height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
+  background: linear-gradient(#A7BFE8, #6190E8);
+  font-family: 'Tahoma';
   overflow-y: hidden;
   display: flex;
   justify-content: center;
