--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,10 @@ a:hover {
 .projectListActionTd {
 	text-align: right !important;
 }
+
+.projectList {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+}
