--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,16 @@ body {
 }
 */
 
+.fade-enter {
+	opacity: 0;
+	z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+	opacity: 1;
+	transition: opacity 250ms ease-in;
+}
+
 #App {
 	height: 100%;
 	margin: 0 auto;
