--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,18 @@ body {
 }
 */
 
+.app_logo {
+	width: 250px;
+	height: 250px;
+	align-self: center;
+	border-radius: 5px;
+	margin: 10px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	filter: drop-shadow(0px 16px 6px rgba(0, 0, 0, 0.1));
+}
 .fade-enter {
 	opacity: 0;
 	z-index: 1;
@@ -70,7 +82,7 @@ body {
 	width: 400px;
 	height: 450px;
 	position: absolute;
-	margin-left: -200px;
+	margin-left: -205px;
 	margin-top: -225px;
 	left: 50%;
 	top: 50%;
